# insurance-calc-back

./: Procfile  data.json  manage.py  pyproject.toml  requirements.txt
car_api/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
car_api/migrations/: 0001_initial.py  0002_model_popularity_alter_car_year.py  0003_modelyear_alter_car_make_alter_car_model_and_more.py  0004_alter_model_model.py  0005_trim_make.py  0006_remove_trim_make_remove_trim_model_trim_model.py
core_conf/: asgi.py  settings.py  urls.py  wsgi.py
