[tool.poetry]
name = "policyme-backend"
version = "0.1.0"
description = ""
authors = ["Denis Sakhno <97180503+ideniska@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "policyme_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.5"
gunicorn = "^20.1.0"
django-cors-headers = "^3.14.0"
django-filter = "^23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
